# claude-telegram

./: .env.example  .gitignore  CLAUDE.md  README.md  brc.cmd  pyproject.toml  register-session.sh  run.sh  unregister-session.sh
src/claude_telegram/: __init__.py  bot.py  claude.py  config.py  main.py  pty_session.py  pty_wrapper.py  store.py
tests/: test_pty_tcp.py
