[project]
name = "claude-telegram"
version = "0.1.0"
description = "Telegram bot for Claude Code — tmux sessions + SDK fallback"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=22.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "claude-agent-sdk>=0.1.44",
    "pyte>=0.8.2",
    "pywinpty>=3.0; platform_system == 'Windows'",
]

[project.optional-dependencies]
sdk = ["claude-agent-sdk>=0.1.39"]

[project.scripts]
claude-telegram = "claude_telegram.main:main"
bridge-claude = "claude_telegram.pty_wrapper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_telegram"]
